<resources>
    <string name="app_name">Schedule_APP</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="click_to_login">Already have an account? Sign In</string>
    <string name="click_to_register">Don\'t have an account? Sign Up</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello, User!</string>
    <string name="name">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_has_not_verified">Email Has Not Verified!</string>
    <string name="company_name">Schedule It!</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="admin">Register as administrator</string>
    <string name="company_logo_description">Company Logo</string>
    <string name="name_content_description">Your First name</string>
    <string name="lastname_content_description">Your Last name</string>
    <string name="phone_content_description">Your Phone number</string>
    <string name="admin_checkbox_content_description">admin Checkbox</string>
    <string name="admin_code">Admin Code</string>
    <string name="admin_code_hint">Enter admin code</string>
    <string name="admin_code_incorrect">Incorrect admin code</string>
    <string name="register_button_content_description">Register Button</string>
    <string name="progress_bar_content_description">Progress Bar</string>
    <string name="login_now_textview_content_description">Login Now TextView</string>
    <string name="email_content_description">Your email address</string>
    <string name="password_content_description">Your password</string>
    <string name="email_hint">Your email address</string>
    <string name="password_hint">Your password</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="back_button_description">Back</string>
    <string name="update_your_personal_details">Update Your Personal Details</string>
    <string name="close_button_description">close button</string>

</resources>
