<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:padding="24dp"
        tools:context=".Registration">

        <!-- Name TextInput -->
        <TextView
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/name_content_description"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <!-- Last Name TextInput -->
        <TextView
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/lastname_content_description"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Phone TextInput -->
        <TextView
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/phone_content_description"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <!-- Email TextInput -->
        <TextView
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/email_content_description"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <!-- Password TextInput -->
        <TextView
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:inputType="textPassword"
            android:hint="@string/password_content_description"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <!-- Agree to Terms CheckBox -->
        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_terms"
            android:textColor="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/terms_checkbox_content_description" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:contentDescription="@string/register_button_content_description" />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/progress_bar_content_description" />

        <!-- Login Now TextView -->
        <TextView
            android:id="@+id/loginNow"
            android:text="@string/already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/textColorSecondary"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/login_now_textview_content_description" />
    </LinearLayout>
</ScrollView>
