<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="start"
        tools:context=".Login">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/company_logo_description" />

        <TextView
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/welcome_back"
            android:textSize="16sp"
            android:textColor="@color/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp" />

        <!-- Email TextInput -->
        <TextView
            android:text="@string/email"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/email_content_description"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="ContentDescription,EditableContentDescCheck"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"/>

        <!-- Password TextInput -->
        <TextView
            android:text="@string/password"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/password_content_description"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="EditableContentDescCheck"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!-- Sign In Button -->
        <Button
            android:id="@+id/btn_login"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/red3"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:stateListAnimator="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center_vertical">

            <TextView
                android:id="@+id/ForgotPassword"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_neutral60"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/registerNow"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="end"
                android:textColor="@color/red3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
